# targa

./: .gitignore  CMakeLists.txt  Doxyfile.in  README.md  appveyor.yml  configure  targa.c  targa.h  targa_test.c  test-image.tga  test-image2.tga  tga.c  tgatest-blang.tga  tgatest-rouge.tga  tgatest.tga
